# gpterchat

./: README.md
gpterchat/: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
gpterchat/.github/workflows/: build.yml  check-release.yml
gpterchat/gpterchat/: __init__.py
gpterchat/schema/: plugin.json
gpterchat/src/: index.ts
gpterchat/src/__tests__/: gpterchat.spec.ts
gpterchat/ui-tests/: package.json
gpterchat/ui-tests/tests/: gpterchat.spec.ts
